--- a/index.html
+++ b/index.html
@@ -4,11 +4,17 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <canvas id="myCanvas"></canvas>
+    <canvas id="carCanvas"></canvas>
+    <canvas id="networkCanvas"></canvas>
     <script src="utils.js"></script>
+    <script src="visualiser.js"></script>
     <script src="car.js"></script>
     <script src="controls.js"></script>
+    <script src="sensor.js"></script>
     <script src="road.js"></script>
+    <script src="network.js"></script>
     <script src="main.js"></script>
 </body>
 </html>
+
+<!-- stopped at 1:17:39 timestamp -->
